# symphony

./: .gitignore  AGENT-MEMORY-SPEC.md  README.md  WORKFLOW.md  main.py  pyproject.toml
.memory/: INDEX.md  graph.json
.memory/nodes/: 001-agent-memory-protocol.md  002-symphony-spec-status.md  003-sandbox-constraints.md  004-github-token-scope.md
.memory/queue/: pending.md
symphony/: __init__.py  agent.py  config.py  logger.py  models.py  orchestrator.py  status.py  tracker.py  workspace.py
