[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphony"
version = "0.1.0"
description = "Symphony — autonomous coding agent orchestrator (Python)"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27","pyyaml>=6.0","jinja2>=3.1"]

[project.scripts]
symphony = "main:main"
